# collective.bbcodesnippets

./: .gitignore  CHANGES.rst  LICENSE.rst  MANIFEST.in  Makefile  README.rst  base.cfg  constraints.txt  instance.yaml  mx.ini  plone-5.2.x.cfg  pyproject.toml  requirements-mxdev.txt  requirements.txt  setup.cfg
.github/workflow/: tests.yaml
.github/workflows/: release.yaml  tests.yaml
js/: package-lock.json  package.json  rollup.config.js
js/src/: CodeSnippets.svelte  main.js  restapi.js  store.js
src/collective/bbcodesnippets/: __init__.py  configure.zcml  controlpanel.py  demo.pt  demo.py  formatters.py  formatters.zcml  indexer.py  interfaces.py  menu.py  parser.py  restapi.py  setuphandlers.py  testing.py  tinymce.py  transform.py
src/collective/bbcodesnippets/profiles/default/: browserlayer.xml  catalog.xml  controlpanel.xml  metadata.xml  registry.xml
src/collective/bbcodesnippets/profiles/uninstall/: browserlayer.xml  controlpanel.xml  registry.xml
src/collective/bbcodesnippets/static/: collective.bbcodesnippets.js  collective.bbcodesnippets.js.map  collective.bbcodesnippets.min.js
src/collective/bbcodesnippets/tests/: mocks.py  test_parser.py  test_setup.py  test_transform.py
