[project]
name = "collective.bbcodesnippets"
version = "2.0.0b1.dev0"
description = "BBCode Snippet Support for Plone"
keywords = ["bbcode", "plone"]
readme = "README.rst"

authors = [
    {name = "Jens Klein", email = "jk@kleinundpartner.at"},
]
requires-python = ">=3.11"
license = { text = "GPL 2.0" }
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Plone",
    "Framework :: Plone :: Addon",
    "Framework :: Plone :: 6.1",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Development Status :: 5 - Production/Stable",
]
dependencies = [
    "plone.restapi",  # pulls in whole Products.CMFPlone too
    "bbcode>=1.1",
]

[project.urls]
PyPI = "https://pypi.python.org/pypi/collective.bbcodesnippets"
Changelog = "https://github.com/collective/collective.bbcodesnippets/blob/main/CHANGES.rst"
Source = "https://github.com/collective/collective.bbcodesnippets"
Issues = "https://github.com/collective/collective.bbcodesnippets/issues"

[project.optional-dependencies]
test = [
    "plone.app.contenttypes[test]",
    "pytest-plone",
    "pdbpp",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/collective"]



[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "test",
]

[tool.isort]
profile = "plone"

[tool.codespell]
ignore-words-list = "discreet,"
skip = './venv/*'

[tool.check-manifest]
ignore = [
    ".editorconfig",
    ".pre-commit-config.yaml",
    "tox.ini",
    "mypy.ini",
    ".flake8",
    "mx.ini",

]
