[metadata]
version = 2.0.0.dev0
name = collective.bbcodesnippets
description = Add BBCode in the site and transform it.
long_description = file: README.rst, CHANGES.rst, LICENCE.rst
keywords = zope plone bbcode
author = BlueDynamics Alliance
author_email = dev@bluedynamics.com
url = https://github.com/collective/collective.bbcodesnippets
license = BSD
classifiers =
    Environment :: Web Environment
    Framework :: Plone
    Framework :: Plone :: Addon
    Framework :: Plone :: 6
    Framework :: Zope
    Framework :: Zope :: 5
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Development Status :: 3 - Beta

[options]
include_package_data = True
install_requires =
    bbcode>=1.1
    setuptools>=39.1.0
    plone.restapi

namespace_packages =
    collective
package_dir =
    = src
packages = find:
zip_safe = False

[options.extras_require]
test =
    plone.app.testing
    plone.app.robotframework
    mock ; python_version<"3"

[options.packages.find]
where =
    src

[options.entry_points]
z3c.autoinclude.plugin =
    target = plone

[check-manifest]
ignore =
    buildout.cfg

[isort]
# black compatible Plone isort rules:
profile = black
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2

[bdist_wheel]
universal = 1

[zest.releaser]
create-wheel = yes